Fix align on footer icon

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -16,10 +16,11 @@
 			padding: 2px 5px;
 			margin: 0 -5px;
 			border-radius: 4px;
+			display: inline-flex;
+			align-items: center;
 
 			svg {
-				margin-left: 4px;
-				margin-top: -4px;
+				margin-left: 8px;
 				width: 20px;
 				height: 20px;
 			}
